assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&family=Viga&display=swap');

/* Remove any default margin, padding and border */

* {
    margin: 0;
    padding: 0;
    border: none;
    /* box-sizing: border-box; */
}



body {
    font-family: 'Oxygen', sans-serif;
    background-color: #E6DDC4;
    color: #181D31; 
    font-weight: 400;
    width: 100%;
}


/* Logo and Headers */
h1, h2 {
    font-family: 'Viga', sans-serif;
    color: #181D31;
}


/* Display the Logo on the Left side and add margin and increased font size*/
#logo {
    float: left;
    font-size: 200%;
    margin-left: 40px;
}


/* Display the Menu Bar on the right side, add margin */
#menu {
    float: right;
    font-weight: 400;
    word-spacing: 5px;
    margin-right: 40px;
}


/* Set the nav bar horizontally */
#menu li {
    display: inline;
    list-style-type: none;
    
}


/* For the a element remove the underline, apply the color:#181D31 and then the padding in order to create space */
#menu > ul > li > a {
    text-decoration-line: none;
    color: #181D31;
    text-align: center;
    padding: 5px 15px;
}


#menu, #logo {
    line-height: 100px;
    text-decoration-line: none;
}

/* Undeline the Active Page and change sizee */
.active {
    border-bottom: 2px solid #181D31;
    font-size: 125%;
}



/* Hero Image for Home Page */
/* Idea from Love Running Project */

#hero-section {
    width: 100%;
    height: 500px;
    overflow: hidden;
    position: relative; 
}
 

#hero-image {
   width: 100%;
   height: 500px; 
   background: url('/assets/images/hero-image.jpg');
   display: block;
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
}



/* Text above Image. Source Love Running Project */

#image-text {
    font-size: 150%;
    width: 250px;
    height: 150px;
    text-align: center;
    padding: 25px 35px;

    background-color: rgba(24, 29, 49, 0.9);
    
    top: 200px;
    right: 100px;

    position: absolute;
}


#image-text h2 {
    color:rgb(240, 233, 210);
}


/* This area is dedicated to the Story Section */

#story-section {
    height: 600px;
    width: 100%;
    overflow: hidden;
}

#story {
    height: 400px;
    flex-direction: row-reverse;
    align-items: center;
    background-color: #181D31;
}


#comment-story {
    flex: 60%;
    width: 100%;
    color: #E6DDC4;   /* Add color for paragraphs in Story Area */
    padding: 30px;
    /*margin: 40px;*/
    float: left;
}

#comment-story h2 {   /* Add color, alignement and new font size for title in Story Area */
    color: #E6DDC4;
    text-align: center;
    font-size: 30px;
}

#comment-story p {
    font-size: 120%;
}

#video-story {
    flex: 40%;
    width: 100%;
    margin-right: 40px;
}



/* Add Flex Content for the Video in the Story Section */

#video-spaghetti {
    max-width: 550px;
    max-height: 350px;
    border-radius: 20px;
    box-sizing: border-box;
    float: right;
}



/* This content is used for all the titles in the Homepage */

.titles-sections {
    text-align: center;
    font-size: 250%;
    margin: 60px 0 20px 0;
}




/* Recipe of the Day Section - Homepage */

#recipe-section-homepage {
    height: 500px;
    width: 100%;
}

#recipes {
    background-color: #181D31;
    width: 100%;
    height: 400px;
}

.container {
    width: 100%;
    display: flex;
    flex-flow: row no-wrap; /* This is a shorthand for flex direction and wrap. To allow flex items to wrap onto multiple lines, from top to bottom use wrap. */
    align-items: center;
    justify-content: space-between; /* Justify-Content: Defines the alignment along the main axis. */
    gap: 10px; 
}


#image-recipe-homepage {
    float: left;
    width: 550px;
    height: 350px;
    margin-left: 40px;
    border-radius: 20px;
}

/* Add Flex property for the div elements of the Recipe of the Day Section */
.flex-title-recipe {
    flex: 33%;
    margin-left: 40px;
}

.flex-image-recipe {
    flex: 34%;
}

.flex-ingredient-recipe {
    flex: 33%;
    margin-right: 40px;
}

#recipe-ingredients h2 {
    color: #E6DDC4;
    text-align: center;
    font-size: 30px;
}

#recipe-ingredients h3 {
    color: #E6DDC4;
    font-size: 110%;
}

#recipe-title h2{
    color: #E6DDC4;
    text-align: center;
    align-content: center;
    font-size: 30px;
}

#recipe-ingredients ul li {
    color: #E6DDC4;
    list-style-type: none;
    font-size: 110%;
}

#recipe-title ul li {
    color: #E6DDC4;
    list-style-type: none;
    font-size: 110%;
}




/* Footer Section */
footer {
    height: 150px;
}

#social {
    text-align: center;
    
}

#social li {
    display: inline;
    
}

#social li i {
    font-size: 50px;
    text-decoration: none;
    list-style-type: none;
    margin: 20px;
    padding: 20px;
    color: #181D31;
}



/* Contact Us Page */

#form-area-contact-us {
    width: 100%;
    height: 900px;
    overflow: hidden;
    background: url(/assets/images/contact-us-background.jpg) no-repeat center center;
    position: relative;
}



#image-text-contact-us{
    font-size: 150%;
    width: 80%;
    height: 190px;
    text-align: center;
    padding: 30px;
    margin: 0 auto;
    background-color: rgba(24, 29, 49, 0.9);
    
    border-radius: 20px;
    top: 7%;
    left: 7%;
    
    position: absolute;
}


#image-text-contact-us h2 {
    color: #E6DDC4;
}

#form-user-contact-us {
    margin: 100px 10% 0 0;
    color: #E6DDC4;
    text-align: left;
    font-size: 110%;

    width: 40%;
    height: 320px;
    
    border-radius: 20px;
    top: 25%;
    left: 26%;

    padding: 30px;
    background-color: rgba(24, 29, 49, 0.9);

    position: absolute;
}


.input-contact-us {
    margin-top: 2px;
    margin-bottom: 15px; 
    
    background: transparent;
    color: #E6DDC4;

    width: 100%;
    height: 25px;

    border: 2px solid #E6DDC4 ;
    border-radius: 10px;
    display: block;
}

.input-contact-us:hover {
    border-color: #FB743E;  
}

#form-user-contact-us label {
    font-size: 110%;
}


.buttons { 
    width: 150px;
    float: right;

    margin-top: 40px;
    margin-left: 10px;
    padding: 15px 10px;

    font-size: 100%;
    text-align: center;

    background-color: #E6DDC4;
    color: #181D31;

    border-radius: 10px;
    display: block;
}



.buttons:hover {
    background-color: #FB743E;
    color: #181D31;
}


#buttons-area-contact-us > h6 {
    display: block;
    float: left;
    margin-top: 80px;
}


/* Address and Map Section - Contact Us Page */

#about-us-container {
    width: 100%;
    height: 500px;
    display: flex;
    background-color: #181D31;
}


.about-us-address {
    flex: 50%;
    color: #E6DDC4;
    margin-left: 40px
}

#about-us-container h3 {
    font-size: 200%;
    text-align: center;
    margin: 10px 40px 0 40px;
    padding: 20px;
}

.about-us-address li {
    font-size: 110%;
    margin-left: 40px;
    list-style-type: none;
}


.about-us-maps {
    flex: 50%;
    color: #E6DDC4;
    text-align: center;
    margin-right: 40px
}


.about-us-maps iframe {
    width: 80%;
    height: 350px;
    border-radius: 20px;
    align-items: center; 
}


/* Contact Details - Contact Us Page */


.about-us-address h4 {
    font-size: 125%;
    text-align: center;
    margin: 0 auto;
}

.company-details {
    text-align: center;
    justify-content: center;
    margin: 10px auto; 
}


/* Share Page */

#form-area-share {
    width: 100%;
    margin: 0 auto;
    height: 1200px;
    overflow: hidden;
    background: url(/assets/images/share-background.jpg) repeat center;
    position: relative;
    
}

#image-text-share{
    font-size: 150%;
    width: 70%;
    height: 150px;
    text-align: center;
    padding: 30px;
    
    background-color: rgba(24, 29, 49, 0.9);
    
    margin: auto 0;
    border-radius: 20px;
    top: 7%;
    left: 13.5%;

    position: absolute;
}


#image-text-share h2 {
    color: #E6DDC4;
}


#form-user-share {
    color: #E6DDC4;
    text-align: left;
    font-size: 110%;

    width: 80%;
    height: 600px;
    
    border-radius: 20px;
    top: 30%;
    left: 8.5%;

    padding: 30px;
    background-color: rgba(24, 29, 49, 0.9);

    position: absolute;
}

